[gd_scene load_steps=37 format=3 uid="uid://bk6ihg1vf71uf"]

[ext_resource type="Script" path="res://Assets_Main/Character/Player.gd" id="1_twfth"]
[ext_resource type="Material" uid="uid://b0vyuvvjptrtg" path="res://Resources/Material/RedAlpha.tres" id="2_5ji8l"]
[ext_resource type="PackedScene" uid="uid://c4pg4fa4c3vft" path="res://Resources/Character/MrPicto/body_scene.tscn" id="2_c5t80"]
[ext_resource type="Script" path="res://Assets_Main/Character/Player_interact.gd" id="2_fls23"]
[ext_resource type="PackedScene" uid="uid://bledb03vcydda" path="res://Assets_Main/Character/Pause_menu.tscn" id="2_ghaer"]
[ext_resource type="Shader" path="res://Assets_Main/Character/CrossHair.gdshader" id="2_ksj8u"]
[ext_resource type="PackedScene" uid="uid://cerd3suomf3u2" path="res://Assets_Main/Character/PlayerHUDHotbar.tscn" id="3_fnuc4"]
[ext_resource type="PackedScene" uid="uid://dtcknsjsvxg38" path="res://Assets_Main/Inventory/Inventory.tscn" id="3_grckl"]
[ext_resource type="Script" path="res://Assets_Main/Character/Player_FPCinteract.gd" id="4_750b5"]
[ext_resource type="Script" path="res://Assets_Main/Character/HandHeldAnimation.gd" id="5_npdg3"]
[ext_resource type="Script" path="res://Assets_Main/Character/Mouse.gd" id="5_qmagh"]
[ext_resource type="Shader" path="res://Assets_Main/Character/Cursor.gdshader" id="5_u5uvm"]
[ext_resource type="PackedScene" uid="uid://v2j546pk6a4k" path="res://Assets_Main/Character/PlayerHUDStatesBar.tscn" id="6_b8jq2"]
[ext_resource type="PackedScene" uid="uid://tnlamai5w4yx" path="res://Assets_Main/Character/VirtualJoypad/VirtualJoypad.tscn" id="8_ox0si"]
[ext_resource type="PackedScene" uid="uid://cgea2weecephm" path="res://Assets_Main/Character/Chat/Chat.tscn" id="10_gspbl"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_a500n"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xn36b"]

[sub_resource type="BoxShape3D" id="BoxShape3D_8ga1f"]
size = Vector3(0.25, 0.25, 1)

[sub_resource type="BoxMesh" id="BoxMesh_n6bsr"]
size = Vector3(0.25, 0.25, 1)

[sub_resource type="Gradient" id="Gradient_kcmtc"]
interpolation_mode = 2
interpolation_color_space = 2
offsets = PackedFloat32Array(0.25, 0.75)
colors = PackedColorArray(0, 1, 1, 1, 0, 0.560784, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qby3e"]
gradient = SubResource("Gradient_kcmtc")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bcc5j"]
shading_mode = 0
albedo_texture = SubResource("GradientTexture1D_qby3e")

[sub_resource type="QuadMesh" id="QuadMesh_01c7o"]
size = Vector2(20, 25)

[sub_resource type="BoxShape3D" id="BoxShape3D_stt28"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vxpu5"]
shader = ExtResource("2_ksj8u")

[sub_resource type="Gradient" id="Gradient_srgr6"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.5)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vsdsi"]
gradient = SubResource("Gradient_srgr6")
width = 3
height = 3
fill_to = Vector2(0.5, 0.5)
repeat = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nmodt"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
border_width_bottom = 4
border_color = Color(0.8, 0.8, 0.8, 0)
corner_detail = 1
expand_margin_top = 4.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_co7mu"]

[sub_resource type="BoxMesh" id="BoxMesh_33j34"]
material = SubResource("StandardMaterial3D_co7mu")
size = Vector3(1.01, 0.51, 1.01)

[sub_resource type="Gradient" id="Gradient_gpkj0"]
offsets = PackedFloat32Array(0.9, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_f0825"]
gradient = SubResource("Gradient_gpkj0")
width = 32
height = 32
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yjrry"]
render_priority = 0
shader = ExtResource("5_u5uvm")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/albedo = SubResource("GradientTexture2D_f0825")

[sub_resource type="BoxShape3D" id="BoxShape3D_j771c"]
margin = 0.0
size = Vector3(0.79, 0.19, 0.79)

[sub_resource type="SphereMesh" id="SphereMesh_qjga7"]
radius = 0.2
height = 0.4

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_ocwai"]

[node name="Player" type="CharacterBody3D" groups=["Hurtable"]]
collision_layer = 4
collision_mask = 15
floor_max_angle = 0.872665
script = ExtResource("1_twfth")

[node name="PlayerColl" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_a500n")

[node name="ClimbArea" type="Area3D" parent="PlayerColl" groups=["PlayerMotion"]]
collision_layer = 4
collision_mask = 27

[node name="Coll" type="CollisionShape3D" parent="PlayerColl/ClimbArea"]
shape = SubResource("CapsuleShape3D_a500n")

[node name="MotionArea" type="Area3D" parent="PlayerColl" groups=["PlayerMotion"]]
collision_layer = 4
collision_mask = 27

[node name="Coll" type="CollisionShape3D" parent="PlayerColl/MotionArea"]
shape = SubResource("CapsuleShape3D_xn36b")

[node name="AttackArea" type="Area3D" parent="PlayerColl"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
collision_layer = 0
collision_mask = 31

[node name="Coll" type="CollisionShape3D" parent="PlayerColl/AttackArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
shape = SubResource("BoxShape3D_8ga1f")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerColl/AttackArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
visible = false
material_override = ExtResource("2_5ji8l")
mesh = SubResource("BoxMesh_n6bsr")

[node name="BodyScene" parent="." instance=ExtResource("2_c5t80")]

[node name="ThirdPerosnCam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 100.9, 100)
cull_mask = 47
projection = 1
current = true
fov = 72.7
near = 0.001

[node name="InteractRayTP" type="RayCast3D" parent="ThirdPerosnCam"]
target_position = Vector3(0, 0, -10000)
collision_mask = 26

[node name="InteractRayTPTest" type="RayCast3D" parent="ThirdPerosnCam/InteractRayTP"]
target_position = Vector3(0, 0, -10000)
collision_mask = 26

[node name="Background" type="MeshInstance3D" parent="ThirdPerosnCam"]
transform = Transform3D(-0.5, -0.866025, 0, 0.866025, -0.5, 0, 0, 0, 1, 0, 0, -1000)
material_override = SubResource("StandardMaterial3D_bcc5j")
mesh = SubResource("QuadMesh_01c7o")

[node name="PlayerCam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
cull_mask = 27
doppler_tracking = 1
size = 0.001

[node name="FirstPersonHandled" type="SubViewportContainer" parent="PlayerCam"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
metadata/_edit_use_anchors_ = true

[node name="SubViewport" type="SubViewport" parent="PlayerCam/FirstPersonHandled"]
transparent_bg = true
handle_input_locally = false
canvas_cull_mask = 4293918736
size = Vector2i(1600, 900)
render_target_update_mode = 4

[node name="FirstPersonCam" type="Camera3D" parent="PlayerCam/FirstPersonHandled/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
cull_mask = 16
script = ExtResource("4_750b5")

[node name="HandHeldRight" type="Marker3D" parent="PlayerCam/FirstPersonHandled/SubViewport/FirstPersonCam"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.45, -0.35, -0.5)
script = ExtResource("5_npdg3")

[node name="WorldActual" type="SubViewportContainer" parent="PlayerCam"]
visible = false
visibility_layer = 15
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="PlayerCam/WorldActual"]
transparent_bg = true
handle_input_locally = false
canvas_cull_mask = 4293918735
size = Vector2i(1600, 900)
render_target_update_mode = 0

[node name="WorldActualCam" type="Camera3D" parent="PlayerCam/WorldActual/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
visible = false
cull_mask = 0

[node name="InteractRay" type="RayCast3D" parent="PlayerCam"]
target_position = Vector3(0, 0, -2)
collision_mask = 26
script = ExtResource("2_fls23")

[node name="InteractRayFront" type="RayCast3D" parent="PlayerCam"]
target_position = Vector3(0, 0, -1)

[node name="StandingDetected" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_stt28")
target_position = Vector3(0, 0, 0)
collision_mask = 11

[node name="StairsAheadRayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.35, -0.41)
target_position = Vector3(0, -0.55, 0)
collision_mask = 11

[node name="StairsBelowRayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)
target_position = Vector3(0, -0.5, 0)
collision_mask = 11

[node name="Transition" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Caption" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_qmagh")

[node name="CrossHair" type="TextureRect" parent="."]
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_vxpu5")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.5
offset_top = -4.5
offset_right = 4.5
offset_bottom = 4.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_vsdsi")
metadata/_edit_use_anchors_ = true

[node name="InteractionTip" type="Control" parent="CrossHair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="Label" parent="CrossHair/InteractionTip"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -21.0
offset_right = 20.5
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_nmodt")
text = "✅"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Text" type="Label" parent="CrossHair/InteractionTip"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_top = 30.0
grow_horizontal = 2
theme_override_constants/outline_size = 4
text = "[E]"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HudHotbar" parent="." instance=ExtResource("3_fnuc4")]
mouse_filter = 1

[node name="HudStatesBar" parent="." instance=ExtResource("6_b8jq2")]

[node name="Chat" parent="." instance=ExtResource("10_gspbl")]
custom_minimum_size = Vector2(500, 250)
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
offset_top = -250.0
offset_right = 500.0
grow_horizontal = 1
grow_vertical = 0

[node name="VirtualJoypad" parent="." instance=ExtResource("8_ox0si")]
visible = false

[node name="Inventory" parent="." instance=ExtResource("3_grckl")]

[node name="Pause_menu" parent="." instance=ExtResource("2_ghaer")]

[node name="Cursor" type="CSGMesh3D" parent="."]
top_level = true
layers = 6
mesh = SubResource("BoxMesh_33j34")
material = SubResource("ShaderMaterial_yjrry")

[node name="DetectionArea" type="Area3D" parent="Cursor"]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape" type="CollisionShape3D" parent="Cursor/DetectionArea"]
shape = SubResource("BoxShape3D_j771c")

[node name="Cursor3" type="MeshInstance3D" parent="."]
top_level = true
visible = false
material_override = ExtResource("2_5ji8l")
mesh = SubResource("SphereMesh_qjga7")

[node name="InteractLowerLimit" type="StaticBody3D" parent="."]
collision_layer = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractLowerLimit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)
shape = SubResource("WorldBoundaryShape3D_ocwai")

[connection signal="area_entered" from="PlayerColl/ClimbArea" to="." method="_on_climb_area_area_entered"]
[connection signal="area_exited" from="PlayerColl/ClimbArea" to="." method="_on_climb_area_area_exited"]
[connection signal="area_entered" from="PlayerColl/MotionArea" to="." method="_on_motion_area_area_entered"]
[connection signal="area_exited" from="PlayerColl/MotionArea" to="." method="_on_motion_area_area_exited"]
[connection signal="mouse_mode_signal" from="Inventory" to="." method="mouse_mode"]
[connection signal="mouse_mode_signal" from="Pause_menu" to="." method="mouse_mode"]

[editable path="HudHotbar"]
